--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(ShinyLoadDriver)
 export(addinLoadTest)
 export(createLoadTestReport)
+export(getConcurrentOverTest)
 export(getConnectionsPerR)
 export(getErrors)
 export(getEventInterval)
@@ -13,10 +14,12 @@ export(getSuccesses)
 export(getTestDurations)
 export(guessTestDuration)
 export(loadTest)
+export(trimRampUp)
 import(miniUI)
+import(processx)
 import(shiny)
 importFrom(R6,R6Class)
 importFrom(assertthat,assert_that)
-importFrom(foreach,"%dopar%")
-importFrom(foreach,foreach)
+importFrom(lubridate,"%within%")
+importFrom(lubridate,force_tz)
 importFrom(shinytest,ShinyDriver)
